--- a/Server/package.json
+++ b/Server/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "mysql2": "^1.5.3",
     "sequelize": "^4.37.6"
   },
   "devDependencies": {
