--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "ajv": "^6.4.0",
+    "angular-calendar": "^0.23.7",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
