Started work on day-view (very experimental)

--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "ajv": "^6.4.0",
     "angular-calendar": "^0.23.7",
     "bootstrap": "^3.3.7",
