--- a/Server/src/config/config.json
+++ b/Server/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "password",
+    "password": "",
     "database": "database_development",
     "host": "127.0.0.1",
     "dialect": "mysql",
@@ -12,7 +12,7 @@
   },
   "test": {
     "username": "root",
-    "password": "password",
+    "password": "",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql",
@@ -22,7 +22,7 @@
   },
   "production": {
     "username": "root",
-    "password": "password",
+    "password": "",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql",
